--- a/app/src/main/res/layout/simple_weather.xml
+++ b/app/src/main/res/layout/simple_weather.xml
@@ -71,11 +71,11 @@
 
         <TextView
             android:id="@+id/type"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:hint="Type"
             android:text="@{weather.type}"
-            android:textAlignment="center"
+            android:textAlignment="textEnd"
             android:textSize="22dp"
             app:layout_constraintRight_toRightOf="@id/typeImg"
             app:layout_constraintTop_toBottomOf="@id/typeImg" />
